Fixed back to top button visibility

--- a/style.css
+++ b/style.css
@@ -235,5 +235,5 @@ th {
     height: 3rem;
     border-radius: 50%;
     padding: 0.25rem;
-    display: inline-block;
+    display: none;
   }
